# vibe-c2

./: .gitignore  Cargo-shellcode.toml  Cargo.toml  README.md
go-beacons/: beacon.go  build.sh  go.mod
src/: beacon.rs  lib.rs  operator.rs  shellcode_beacon.rs  teamserver.rs
