[package]
name = "vibe-c2"
version = "1.0.0"
edition = "2021"
description = "Vibe C2 - A modern Command and Control framework for security research"
authors = ["Example User"]

[dependencies]
tokio = { version = "1.28", features = ["full"] }
axum = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21"
rand = "0.8"
clap = { version = "4.3", features = ["derive"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
reqwest = { version = "0.11", features = ["json"] }
hostname = "0.3"
whoami = "1.4"
local-ip-address = "0.5"
chrono = "0.4"
colored = "2.0"
rustyline = "15.0.0"
once_cell = "1.21.3"
dirs = "5.0"

[[bin]]
name = "vibe-teamserver"
path = "src/teamserver.rs"

[[bin]]
name = "vibe-beacon"
path = "src/beacon.rs"

[[bin]]
name = "vibe-operator"
path = "src/operator.rs"
